--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "hrms_app",
+  "homepage": "https://NP998.github.io/hrms",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "sass": "^1.32.7",
+    "redux": "^4.0.5",
+    "sass": "^1.32.8",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
